--- a/work/voucher/test.ipynb
+++ b/work/voucher/test.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime\n",
     "from docx import Document\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
@@ -15,11 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_under_20 = {\n",
+    "Less_Than_Twenty = {\n",
     "    0: '',\n",
     "    1: 'One',\n",
     "    2: 'Two',\n",
@@ -45,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_under_100 = {\n",
+    "Less_Than_Hundred = {\n",
     "    2: 'Twenty',\n",
     "    3: 'Thirty',\n",
     "    4: 'Forty',\n",
@@ -63,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_above_1000 = {\n",
+    "More_Than_Thousand = {\n",
     "    1: 'Thousand',\n",
     "    2: 'Million',\n",
     "    3: 'Biliion',\n",
@@ -77,162 +76,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def num_to_word(num):\n",
-    "    decimal = round(num - int(num), 2)\n",
-    "    if decimal:\n",
-    "        return ' '.join([num_to_word(int(num)), 'and Cents', num_to_word(int(decimal * 100))])\n",
+    "    if type(num) == float:\n",
+    "        decimal = round(num - int(num), 2)\n",
+    "        if decimal:\n",
+    "            text = ' '.join([num_to_word(int(num)), 'and Cents', num_to_word(int(decimal * 100)), 'Only'])\n",
+    "        else:\n",
+    "            text = ' '.join([num_to_word(int(num)), 'Only'])\n",
+    "        text = text.replace('  ', ' ')\n",
+    "        return text\n",
     "    num_digit = len(str(num))\n",
     "    power = (num_digit - 1) // 3\n",
     "    if num < 20:\n",
-    "        return num_under_20[num]\n",
+    "        text = Less_Than_Twenty[num]\n",
+    "        return text\n",
     "    elif num < 100:\n",
-    "        return ' '.join([num_under_100[num // 10], num_to_word(num % 10)])\n",
+    "        text = ' '.join([Less_Than_Hundred[num // 10], num_to_word(num % 10)])\n",
+    "        return text\n",
     "    elif num < 1000:\n",
-    "        return ' '.join([num_to_word(num // 100), 'Hundred', num_to_word(num % 100)])\n",
+    "        text = ' '.join([num_to_word(num // 100), 'Hundred', num_to_word(num % 100)])\n",
+    "        return text\n",
     "    elif power < 5:\n",
-    "        return ' '.join([num_to_word(num // 1000 ** power), num_above_1000[power], num_to_word(num % 1000 ** power)])"
+    "        text = ' '.join([num_to_word(num // 1000 ** power), More_Than_Thousand[power], num_to_word(num % 1000 ** power)])\n",
+    "        return text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_path = Path.cwd() / 'input'"
+    "def get_table(file_path):\n",
+    "    df = pd.read_excel(file_path)\n",
+    "    \n",
+    "    amounts = ['Amount' + str(i + 1) for i in range(8)]\n",
+    "    for index, amount in enumerate(amounts):\n",
+    "        if index == 0:\n",
+    "            df['Total'] = df[amount]\n",
+    "        elif not df[amount].isna().sum():\n",
+    "            df['Total'] = df['Total'] + df[amount]\n",
+    "    df['Ringgit'] = df['Total'].apply(num_to_word)\n",
+    "    \n",
+    "    df['Date'] = df['Date'].dt.strftime('%d/%m/%Y')\n",
+    "    for amount in amounts:\n",
+    "        if not df[amount].isna().sum():\n",
+    "            df[amount] = df[amount].apply(lambda row: f'{row:,.2f}')\n",
+    "    df['Total'] = df['Total'].apply(lambda row: f'{row:,.2f}')\n",
+    "    df = df.fillna('')\n",
+    "    \n",
+    "    table = df.to_dict('records')\n",
+    "    return table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_list = list(input_path.glob('*.xlsx'))\n",
-    "file_path = file_list[0]"
+    "input_path = Path.cwd() / 'input'\n",
+    "output_path = Path.cwd() / 'output'\n",
+    "template_path = Path.cwd() / 'template'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_excel(file_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['Total'] = df['Amount1']\n",
-    "df['Ringgit'] = df['Total'].apply(num_to_word).apply(lambda row: ' '.join([item for item in row.split(' ') if item] + ['Only']))\n",
-    "df['Date'] = df['Date'].dt.strftime('%d/%m/%Y')\n",
-    "df['Account1'] = df['Account1'].astype(str)\n",
-    "df['Amount1'] = df['Amount1'].apply(lambda row: f'{row:,.2f}')\n",
-    "df['Total'] = df['Total'].apply(lambda row: f'{row:,.2f}')\n",
-    "df = df.fillna('')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = df.to_dict('records')[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Date': '15/01/2024',\n",
-       " 'Voucher': '24/01',\n",
-       " 'Payee': 'Kumpulan Wang Simpanan Pekerja',\n",
-       " 'Method': 'DDR',\n",
-       " 'Reference': '',\n",
-       " 'Account1': '50302',\n",
-       " 'Particular1': 'EPF Contribution',\n",
-       " 'Amount1': '9,979.00',\n",
-       " 'Account2': '',\n",
-       " 'Particular2': '',\n",
-       " 'Amount2': '',\n",
-       " 'Account3': '',\n",
-       " 'Particular3': '',\n",
-       " 'Amount3': '',\n",
-       " 'Account4': '',\n",
-       " 'Particular4': '',\n",
-       " 'Amount4': '',\n",
-       " 'Account5': '',\n",
-       " 'Particular5': '',\n",
-       " 'Amount5': '',\n",
-       " 'Account6': '',\n",
-       " 'Particular6': '',\n",
-       " 'Amount6': '',\n",
-       " 'Account7': '',\n",
-       " 'Particular7': '',\n",
-       " 'Amount7': '',\n",
-       " 'Account8': '',\n",
-       " 'Particular8': '',\n",
-       " 'Amount8': '',\n",
-       " 'Total': '9,979.00',\n",
-       " 'Ringgit': 'Nine Thousand Nine Hundred Seventy Nine Only'}"
+       "WindowsPath('c:/Users/syenl/Documents/Python-Tools/work/voucher/input/payment-voucher.xlsx')"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "file_list = list(input_path.glob('*.xlsx'))\n",
+    "file_path = file_list[0]\n",
+    "file_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WindowsPath('c:/Users/syenl/Documents/Python-Tools/work/voucher/template/payment-voucher.docx')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "temp_path = Path.cwd() / 'temp'\n",
-    "temp_path = list(temp_path.glob('*.docx'))[1]"
+    "template = list(template_path.glob(f'{file_path.stem}.docx'))[0]\n",
+    "template"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc = Document(temp_path)\n",
-    "table = doc.tables[0]\n",
-    "rows = list(table.rows)\n",
-    "for row in rows:\n",
-    "    items = list(row.cells)\n",
-    "    for item in items:\n",
-    "        pattern = r'\\$\\{(.*?)\\}'\n",
-    "        result = re.findall(pattern, item.text)\n",
-    "        if result:\n",
-    "            key = result[0]\n",
-    "            value = data[key]\n",
-    "            runs = list(item.paragraphs[0].runs)\n",
-    "            for index, run in enumerate(runs):\n",
-    "                if index == 0:\n",
-    "                    run.text = value\n",
-    "                else:\n",
-    "                    run.text = ''\n",
-    "doc.save('output.docx')"
+    "table = get_table(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_voucher(template, data, target_path):\n",
+    "    doc = Document(template)\n",
+    "    table = doc.tables[0]\n",
+    "    for row in table.rows:\n",
+    "        for item in row.cells:\n",
+    "            pattern = r'\\$\\{(.*?)\\}'\n",
+    "            result = re.findall(pattern, item.text)\n",
+    "            if result:\n",
+    "                key = result[0]\n",
+    "                value = data[key]\n",
+    "                for index, run in enumerate(item.paragraphs[0].runs):\n",
+    "                    if index == 0:\n",
+    "                        run.text = str(value)\n",
+    "                    else:\n",
+    "                        run.text = ''\n",
+    "    doc.save(target_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, data in enumerate(table):\n",
+    "    target_path = output_path / f'{file_path.stem}-{index + 1}.docx'\n",
+    "    create_voucher(template, data, target_path)"
    ]
   },
   {
